# pytest-xray-reporter

./: .gitignore  README.md  pyproject.toml  xray-report.json
.github/workflows/: publish.yml  test.yml
pytest_xray_reporter/: __init__.py  plugin.py
tests/: test_plugin.py
