[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-xray-reporter"
version = "0.1.14"
description = "Pytest plugin for generating Xray JSON reports"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Jonathan Kittell", email = "jonathan.kittell@vecima.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/vecima/pytest-xray-reporter"
Repository = "https://github.com/vecima/pytest-xray-reporter.git"
Issues = "https://github.com/vecima/pytest-xray-reporter/issues"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["pytest_xray_reporter"]

[project.entry-points.pytest11]
xray-reporter = "pytest_xray_reporter.plugin" 